--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,42 @@
     transform: rotate(360deg);
   }
 }
+
+
+.navbar {
+  background-color: rgb(13, 63, 63);
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 20;
+}
+
+
+ul{
+  display: flex;
+  margin-right: 10px;
+}
+li{
+  color: #fff;
+  text-decoration: none;
+  list-style: none;
+  padding: 0.5rem 1rem;
+  cursor:pointer;
+  height: 100%;
+  border-bottom: 3px solid transparent;
+}
+li:hover:after {
+  width: 100%;
+  background:#ccb345;
+}
+
+a{
+  color:inherit;
+  text-decoration: none;
+}
+
